# OpenCL_MLP_MNIST

./: .gitignore  CMakeLists.txt  README.md  cmake_make.sh
include/: apiopencl.h  mlp.h  mlpTraining.h
src/: apiopencl.cpp  mlp.cl  mlp.cpp  mlpTraining.cpp  testeMatrizes.cl  testeMatrizes.cpp  testeOkOpenCL.cpp  testeOperacional.cpp
